# turtlebot3_simulations

.github/workflows/: ros-ci.yml
turtlebot3_gazebo/: CMakeLists.txt  WAREHOUSE_TEST_COMMANDS.md  package.xml
turtlebot3_gazebo/include/turtlebot3_gazebo/: pedestrian_plugin.hpp
turtlebot3_gazebo/launch/: nav2_aws_warehouse.launch.py  nav2_aws_warehouse_v2.launch.py  nav2_aws_warehouse_v3.launch.py  track_world.launch.py  turtlebot3_aws_warehouse.launch.py  turtlebot3_human_boxes.launch.py  turtlebot3_penalty_corridor.launch.py  turtlebot3_ppo_stage1.launch.py  turtlebot3_ppo_stage2.launch.py  turtlebot3_ppo_stage3.launch.py  turtlebot3_ppo_stage4.launch.py  turtlebot3_safe_room.launch.py  turtlebot3_warehouse_easy.launch.py  turtlebot3_zone_approach.launch.py  turtlebot3_zone_approach_hard.launch.py  turtlebot3_zone_corridor.launch.py  turtlebot3_zone_corridor_narrow.launch.py  turtlebot3_zone_detour.launch.py  turtlebot3_zone_goal.launch.py
turtlebot3_gazebo/maps/warehouse/: goals.yaml  keepout_mask.pgm  keepout_mask.yaml
turtlebot3_gazebo/maps/warehouse_v2/: goals.yaml  keepout_mask.pgm
turtlebot3_gazebo/maps/warehouse_v3/: goals.yaml  map.pgm  map.yaml
turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
turtlebot3_gazebo/params/: nav2_aws_warehouse.yaml
turtlebot3_gazebo/scripts/: generate_warehouse_keepout.py
turtlebot3_gazebo/src/: pedestrian_plugin.cpp
turtlebot3_gazebo/worlds/: track_world.world  turtlebot3_dqn_stage1.world  turtlebot3_dqn_stage2.world  turtlebot3_dqn_stage3.world  turtlebot3_dqn_stage4.world  turtlebot3_human_boxes.world  turtlebot3_penalty_corridor.world  turtlebot3_safe_room.world  turtlebot3_warehouse_easy.world  turtlebot3_zone_approach.world  turtlebot3_zone_approach_hard.world  turtlebot3_zone_corridor.world  turtlebot3_zone_corridor_narrow.world  turtlebot3_zone_detour.world  turtlebot3_zone_goal.world
